parcel för bilder

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "description": "",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.13.3",
-    "parcel": "^2.13.3"
+    "parcel": "^2.13.3",
+    "sharp": "^0.33.5"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead"
 }
