--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@parcel/transformer-sass": "^2.13.3",
     "jsdoc": "^4.0.4",
     "parcel": "^2.13.3",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "svgo": "^3.3.2"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead"
 }
